# parallel_evolution-app

./: .gitignore  Makefile.am  README  configure.ac  fitness.c  main.c
lib/topology_parser/: topology_parser.c
src/: Makefile.am  fitness.c  main.c
